# psf-parser

./: .gitignore  README.md  pyproject.toml
src/psf_parser/: __init__.py  analysis.py  declaration.py  exceptions.py  file.py  parser.py  registry.py  sim.py
src/psf_parser/ascii/: parser.py
src/psf_parser/binary/: chunk_id.py  parser.py
tests/: ascii.py  bin.py  binary.py  conftest.py  file.py  parser_test.py  sim.py  test_ascii.py  test_binary.py  test_file.py  tokenizer_test.py
tests/data/ascii/: dc2.dc  myac.ac  mydc.dc  myinfo_Models.info  myinfo_Oppoint.info  myinfo_all.info  mymonte-001_dc2.dc  mymonte-001_tran1.tran.tran  mymonte-002_dc2.dc  mymonte-002_tran1.tran.tran  mymonte-003_dc2.dc  mymonte-003_tran1.tran.tran  mymonte_dc2.montecarlo  mymonte_tran1.montecarlo  myop.dc  mysweep-000_ac1.ac  mysweep-000_dc1.dc  mysweep-000_mynestedsweep-000_ac2.ac  mysweep-000_mynestedsweep-001_ac2.ac  mysweep-000_mynestedsweep-002_ac2.ac  mysweep-000_mynestedsweep_ac2.sweep  mysweep-001_ac1.ac  mysweep-001_dc1.dc  mysweep-001_mynestedsweep-000_ac2.ac  mysweep-001_mynestedsweep-001_ac2.ac  mysweep-001_mynestedsweep-002_ac2.ac  mysweep-001_mynestedsweep_ac2.sweep  mysweep-002_ac1.ac  mysweep-002_dc1.dc  mysweep-002_mynestedsweep-000_ac2.ac  mysweep-002_mynestedsweep-001_ac2.ac  mysweep-002_mynestedsweep-002_ac2.ac  mysweep-002_mynestedsweep_ac2.sweep  mysweep_ac1.sweep  mysweep_ac2.sweep  mysweep_dc1.sweep  mytran.tran.tran  tran1.tran.tran
tests/data/binary/: dc2.dc  myac.ac  mydc.dc  myop.dc  (+16 more)
tests/psf_file/: dcop.py  sweep.py
tests/psf_parser/: dcop.py  sweep.py
(+27 files in other folders)
